--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Secure Order Form</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
 </head>
 <body>
     <div class="form-container">
